--- a/HealthMed.Web/ClientApp/src/app/auth/login/login.component.html
+++ b/HealthMed.Web/ClientApp/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
 
       <div class="row mb-3">
         <div class="col text-center">
-          <img src="assets/img/logo.png" alt="" width="300px">
+          <img src="assets/img/logo.jpg" alt="" width="300px">
         </div>
       </div>
 
