--- a/HealthMed.Web/ClientApp/src/app/auth/login/login.component.html
+++ b/HealthMed.Web/ClientApp/src/app/auth/login/login.component.html
@@ -1,9 +1,7 @@
-<div class="row h-100 justify-content-center" style="padding-top: 5%;">
-  <div style="width: 350px">
-
+<div class="row justify-content-center">
+  <div class="col-3">
     <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
-
-      <div class="row mb-3">
+      <div class="row mb-3 mt-5">
         <div class="col text-center">
           <img src="assets/img/logo.jpg" alt="" width="300px">
         </div>
@@ -12,8 +10,8 @@
       <div class="row">
         <mat-form-field class="col">
           <mat-label>E-mail</mat-label>
-          <input type="email" matInput formControlName="login" id="login" required />
-          <mat-error *ngIf="formLogin.get('login')?.invalid && formLogin.get('login')?.value.length > 0">
+          <input type="email" matInput formControlName="login" id="login"/>
+          <mat-error *ngIf="formLogin.get('login')?.value && formLogin.get('login')?.invalid">
             E-mail inválido
           </mat-error>
         </mat-form-field>
@@ -22,7 +20,7 @@
       <div class="row">
         <mat-form-field class="col">
           <mat-label>Senha</mat-label>
-          <input matInput type="password" formControlName="senha" minlength="8" maxlength="50" id="senha" required />
+          <input matInput type="password" formControlName="senha" minlength="8" maxlength="50" id="senha"/>
         </mat-form-field>
       </div>
 
@@ -35,6 +33,5 @@
         </div>
       </div>
     </form>
-
   </div>
 </div>
