--- a/HealthMed.Web/ClientApp/src/app/criar-conta/criar-conta.component.html
+++ b/HealthMed.Web/ClientApp/src/app/criar-conta/criar-conta.component.html
@@ -1,11 +1,11 @@
-<div class="row h-100 justify-content-center" style="padding-top: 5%;">
+<div class="row h-100 justify-content-center">
   <div style="width: 350px">
     
     <form [formGroup]="criarContaForm" (ngSubmit)="onSubmit()">
 
       <div class="row mb-3">
         <div class="col text-center">
-          <img src="assets/img/logo.png" alt="" width="300px">
+          <img src="assets/img/logo.jpg" alt="" width="300px">
         </div>
       </div>
 
@@ -56,7 +56,7 @@
         </mat-form-field>
       </div>
 
-      <div class="row align-items-center">
+      <div class="row align-items-center mt-3">
         <div class="col text-start">
           <button class="btn btn-danger" (click)="cancelar()"><i class="fa fa-sign-in"></i> Cancelar</button>
         </div>
