--- a/HealthMed.Web/ClientApp/src/styles.css
+++ b/HealthMed.Web/ClientApp/src/styles.css
@@ -29,7 +29,6 @@ code {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-/*cutomized*/
 .active{
   cursor: pointer;
   padding: 5px;
@@ -68,4 +67,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
   background-color: rgb(192, 210, 192);
   background-image: linear-gradient( to right, rgb(9, 9, 44) , red );
+}
+
+/* Campos de texto Material*/
+.mat-mdc-text-field-wrapper{
+  border: 1px solid rgb(166, 166, 166) !important;
 }
