--- a/HealthMed.Web/ClientApp/src/styles.css
+++ b/HealthMed.Web/ClientApp/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-/* @import "~@ng-select/ng-select/themes/default.theme.css"; */
+@import "~@ng-select/ng-select/themes/default.theme.css";
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 @import '//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css';
