--- a/HealthMed.Web/ClientApp/src/app/home/paciente/paciente.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/paciente/paciente.component.html
@@ -1,7 +1,7 @@
 
 <div class="row py-2">
   <div class="col titulo">
-    Meus Eventos
+    Paciente
   </div>
 </div>
 
@@ -10,7 +10,7 @@
     <div><b>{{item.descricao}}</b></div>
     <div>{{item.data}}</div>
     <div>
-      <abbr title="Cancelar inscrição"><i class="fa fa-trash text-danger active" aria-hidden="true" (click)="deletar(item.id)"></i></abbr>
+      <!-- <abbr title="Cancelar inscrição"><i class="fa fa-trash text-danger active" aria-hidden="true" (click)="deletar(item.id)"></i></abbr> -->
     </div>
   </div>
 </div>
@@ -26,7 +26,7 @@
     <div class="col"><b>{{item.descricao}}</b></div>
     <div class="col">{{item.data}}</div>
     <div class="col">
-      <abbr [title]="this.inscricaoExistente(item.id)? 'Inscrito' : 'Inscreva-se'"><i [ngClass]="this.inscricaoExistente(item.id)? 'fa-solid text-success fa-check mt-3 me-3 active' : 'fa-solid fa-plus mt-3 me-3 active btn-add'" (click)="inscrever(item.id)"></i></abbr>
+      <!-- <abbr [title]="this.inscricaoExistente(item.id)? 'Inscrito' : 'Inscreva-se'"><i [ngClass]="this.inscricaoExistente(item.id)? 'fa-solid text-success fa-check mt-3 me-3 active' : 'fa-solid fa-plus mt-3 me-3 active btn-add'" (click)="inscrever(item.id)"></i></abbr> -->
     </div>
   </div>
 </div>
