--- a/HealthMed.Web/ClientApp/src/app/core/menu/menu.component.html
+++ b/HealthMed.Web/ClientApp/src/app/core/menu/menu.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
   <div class="container">
     <div class="row">
       <div class="col text-center">
-        <img src="assets/img/logo.png" alt="" width="100px">
+        <img src="assets/img/logo.jpg" alt="" width="100px">
       </div>
     </div>
     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
@@ -11,7 +11,7 @@
           <a class="nav-link text-dark">{{getUserName()}}</a>
         </li>
         <li class="nav-item logout">
-          <a class="nav-link text-dark" (click)="logout()"><i class="fa fa-sign-out text-secondary logout"
+          <a class="nav-link text-danger" (click)="logout()"><i class="fa fa-sign-out text-danger logout"
               aria-hidden="true"></i> Sair</a>
         </li>
       </ul>
