front médico - listagem de agenda

--- a/HealthMed.Web/ClientApp/src/app/app.component.html
+++ b/HealthMed.Web/ClientApp/src/app/app.component.html
@@ -8,6 +8,6 @@
   </main>
 
   <footer>
-    <app-footer *ngIf="isLoggedIn"></app-footer>
+    <!-- <app-footer *ngIf="isLoggedIn"></app-footer> -->
   </footer>
 </body>
