--- a/HealthMed.Web/ClientApp/src/app/core/menu/menu.component.css
+++ b/HealthMed.Web/ClientApp/src/app/core/menu/menu.component.css
@@ -25,3 +25,8 @@ html {
   border: 1px solid rgb(170, 170, 170);
   border-radius: 10px;
 }
+
+.card-user{
+  background-color: #d9dfd7cf;
+  border-radius: 10px;
+}
