--- a/HealthMed.Web/ClientApp/src/app/core/menu/menu.component.html
+++ b/HealthMed.Web/ClientApp/src/app/core/menu/menu.component.html
@@ -2,13 +2,13 @@
   <div class="container">
     <div class="row">
       <div class="col text-center">
-        <img src="assets/img/logo.jpg" alt="" width="100px">
+        <img src="assets/img/logo.jpg" alt="" width="80px">
       </div>
     </div>
     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
       <ul class="navbar-nav flex-grow">
         <li class="nav-item">
-          <a class="nav-link text-dark">{{getUserName()}}</a>
+          <a class="nav-link text-dark card-user">{{getUserName()}}</a>
         </li>
         <li class="nav-item logout">
           <a class="nav-link text-danger" (click)="logout()"><i class="fa fa-sign-out text-danger logout"
