--- a/HealthMed.Web/ClientApp/src/styles.css
+++ b/HealthMed.Web/ClientApp/src/styles.css
@@ -66,7 +66,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
   border-radius: 10px;
 
   background-color: rgb(192, 210, 192);
-  background-image: linear-gradient( to right, rgb(9, 9, 44) , red );
+  background-image: linear-gradient( to right, rgb(9, 39, 44) , rgb(163, 210, 176) );
 }
 
 /* Campos de texto Material*/
