--- a/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
@@ -35,17 +35,17 @@
   </div>
 </div>
 
-<div class="row mb-2" *ngFor="let data of agendaList">
+<div class="row mb-2" *ngFor="let item of agendaList">
   <div class="col-2 card-data align-content-center">
     <ul class="list-group list-group-horizontal position-relative">
-      <li class="list-group-item">{{data.data}}</li>
+      <li class="list-group-item">{{item.data}}</li>
       <li class="list-group-item"><i class="col fas fa-edit"></i></li>
     </ul>
   </div>
 
   <div class="col">
     <ul class="list-group list-group-horizontal position-relative overflow-auto w-75">
-      <li *ngFor="let hora of data.hora" class="list-group-item">{{hora}}</li>
+      <li *ngFor="let hora of item.hora" class="list-group-item">{{hora}}</li>
     </ul>
   </div>
 </div>
