--- a/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
@@ -45,7 +45,7 @@
 
   <div class="col">
     <ul class="list-group list-group-horizontal position-relative overflow-auto w-75">
-      <li *ngFor="let hora of item.hora" class="list-group-item">{{hora}}</li>
+      <li *ngFor="let hora of item.hora" class="list-group-item">{{hora.descricao}}</li>
     </ul>
   </div>
 </div>
