--- a/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<form [formGroup]="agendaForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="agendaForm">
   <div class="row align-items-center py-3">
 
     <div class="col-md-3">
@@ -22,9 +22,8 @@
     </div>
 
     <div class="col pt-4">
-      <button class="btn btn-warning me-2"><i class="fa fa-sign-in"></i> Limpar</button>
-      <button type="submit" [disabled]="agendaForm.invalid" class="btn btn-success"><i class="fa fa-sign-in"></i>
-        Criar</button>
+      <button class="btn btn-warning me-2"><i class="fa fa-sign-in" (click)="limpar()"></i> Limpar</button>
+      <button [disabled]="agendaForm.invalid" class="btn btn-success" (click)="onSubmit()"><i class="fa fa-sign-in"></i>Salvar</button>
     </div>
   </div>
 </form>
@@ -35,7 +34,7 @@
   </div>
 </div>
 
-<div class="row mb-2" *ngFor="let item of agendaList">
+<div class="row mb-2" *ngFor="let item of agendaMedica.agenda">
   <div class="col-2 card-data align-content-center">
     <ul class="list-group list-group-horizontal position-relative">
       <li class="list-group-item">{{item.data}}</li>
@@ -45,7 +44,7 @@
 
   <div class="col">
     <ul class="list-group list-group-horizontal position-relative overflow-auto w-75">
-      <li *ngFor="let hora of item.hora" class="list-group-item">{{hora.descricao}}</li>
+      <li *ngFor="let hora of item.horarios" class="list-group-item" [ngClass]="hora.agendado? 'text-primary fw-bold':''">{{hora.horario}}</li>
     </ul>
   </div>
 </div>
