--- a/HealthMed.Web/ClientApp/src/app/home/paciente/paciente.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/paciente/paciente.component.html
@@ -35,19 +35,21 @@
 
     <div>Selecione um horário disponível</div>
 
-    <div class="row mb-2" *ngFor="let agenda of agendaList">
-      <div class="col-2 card-data align-content-center">
+    <div class="row mb-2" *ngFor="let agenda of agendaDoMedico.agenda">
+
+      <div class="col-2 align-content-center">
         <ul class="list-group list-group-horizontal position-relative">
           <div class="list-group-item">{{agenda.data}}</div>
           <li class="list-group-item"><i></i></li>
         </ul>
       </div>
-    
+
       <div class="col">
         <ul class="list-group list-group-horizontal position-relative overflow-auto w-75">
-          <li *ngFor="let hora of agenda.horas" class="btn list-group-item" 
+          <li *ngFor="let hora of agenda.horarios" class="btn list-group-item" 
           [class.selecionado]="isHorarioSelecionado(agenda.id, hora.id)"
-          (click)="selecionarHorario(agenda.id, hora.id)">{{hora.descricao}}</li>
+          [ngClass]="hora.agendado? 'indisponivel':''"
+          (click)="selecionarHorario(agenda.id, hora.id)">{{hora.horario}}</li>
         </ul>
       </div>
     </div>
