PACIENTE - cadastro de consulta

--- a/HealthMed.Web/ClientApp/src/app/home/paciente/paciente.component.css
+++ b/HealthMed.Web/ClientApp/src/app/home/paciente/paciente.component.css
@@ -11,7 +11,7 @@
 }
 
 .selecionado {
-    background-color: #d3d3d3; /* Escolha a cor que desejar */
+    background-color: #96d7f8;
 }
 
 .indisponivel{
