listagem de consultas

--- a/HealthMed.Web/ClientApp/src/app/home/paciente/paciente.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/paciente/paciente.component.html
@@ -63,25 +63,21 @@
   </div>
 </div>
 
-<div>
-
-  <div>Selecione um horário disponível</div>
-
-  <div class="row mb-2" *ngFor="let agenda of agendaDoPaciente.agenda">
-
-    <div class="col-2 align-content-center">
-      <ul class="list-group list-group-horizontal position-relative">
-        <li class="list-group-item">{{agenda.data}}</li>
-        <li class="list-group-item cancelamento" (click)="modalCancelar(agenda.horarios[0].idAgenda)"><i class="fa fa-close text-danger"></i></li>
-      </ul>
-    </div>
-
-    <div class="col">
-      <ul class="list-group list-group-horizontal position-relative overflow-auto w-75">
-        <li *ngFor="let hora of agenda.horarios" class="btn list-group-item" 
-        [class.selecionado]="isHorarioSelecionado(hora.idAgenda, hora.id)"
-        (click)="selecionarHorario(hora.idAgenda, hora.id, hora.agendado)">{{hora.horario}}</li>
-      </ul>
-    </div>
-  </div>
-</div>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Data</th>
+      <th scope="col">Hora</th>
+      <th scope="col">Médico</th>
+      <th scope="col">Cancelar Consulta</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let agenda of agendaDoPaciente">
+      <td>{{ agenda.dataConsulta | date : 'dd/MM/yyyy'}}</td>
+      <td>{{agenda.horarioConsulta}}</td>
+      <td>{{agenda.nomeMedico}}</td>
+      <td><button  (click)="modalCancelar(agenda.idAgendaMedica)" class="btn fa fa-close text-danger cancelamento"></button></td>
+    </tr>
+  </tbody>
+</table>
