--- a/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
@@ -38,13 +38,14 @@
   <div class="col-2 card-data align-content-center">
     <ul class="list-group list-group-horizontal position-relative">
       <li class="list-group-item">{{item.data}}</li>
-      <li class="list-group-item"><i class="col fas fa-edit"></i></li>
+      <li class="list-group-item btn-edit"><i class="col fas fa-edit"></i></li>
+      <li class="list-group-item btn-remove"><i class="col fa fa-close text-danger"></i></li>
     </ul>
   </div>
 
   <div class="col">
     <ul class="list-group list-group-horizontal position-relative overflow-auto w-75">
-      <li *ngFor="let hora of item.horarios" class="list-group-item" [ngClass]="hora.agendado? 'text-primary fw-bold':''">{{hora.horario}}</li>
+      <li *ngFor="let hora of item.horarios" class="list-group-item" [ngClass]="hora.agendado? 'horario-agendado':''">{{hora.horario}}</li>
     </ul>
   </div>
 </div>
