--- a/HealthMed.Web/ClientApp/src/styles.css
+++ b/HealthMed.Web/ClientApp/src/styles.css
@@ -82,3 +82,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 .disabled-field{
   cursor: not-allowed !important;
 }
+
+.btn-remove{
+  cursor: pointer;
+}
+
+.btn-remove:hover{
+  background-color: #ebebeb;
+}
+
+.btn-edit{
+  cursor: pointer;
+}
+.btn-edit:hover{
+  cursor: pointer;
+  background-color: #ebebeb;
+}
+
