Exclusão de agenda médica

--- a/HealthMed.Web/ClientApp/src/app/app.component.html
+++ b/HealthMed.Web/ClientApp/src/app/app.component.html
@@ -7,7 +7,7 @@
     <router-outlet></router-outlet>
   </main>
 
-  <footer>
-    <!-- <app-footer *ngIf="isLoggedIn"></app-footer> -->
-  </footer>
+  <!-- <footer>
+    <app-footer *ngIf="isLoggedIn"></app-footer>
+  </footer> -->
 </body>
