--- a/HealthMed.Web/ClientApp/src/app/core/footer/footer.component.html
+++ b/HealthMed.Web/ClientApp/src/app/core/footer/footer.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mt-3">
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col text-center p-4">
       </div>
@@ -7,5 +7,5 @@
     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
      
     </div>
-  </div>
+  </div> -->
 </nav>
