--- a/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
@@ -11,7 +11,6 @@
       <label for="data" class="label">Data</label>
       <input placeholder="dd/mm/aaaa" id="data" class="form-control" formControlName="data" bsDatepicker
         #dp="bsDatepicker" autocomplete="off" ondrop="return false;" required>
-      <span class="text-secondary text-danger" *ngIf="data?.touched && data?.invalid">Campo obrigatório</span>
     </div>
 
     <div class="col-4" *ngIf="data?.value">
@@ -39,7 +38,7 @@
     <ul class="list-group list-group-horizontal position-relative">
       <li class="list-group-item">{{item.data}}</li>
       <li class="list-group-item btn-edit"><i class="col fas fa-edit"></i></li>
-      <li class="list-group-item btn-remove"><i class="col fa fa-close text-danger"></i></li>
+      <li class="list-group-item btn-remove" (click)="modalExcluir(item.data)"><i class="col fa fa-close text-danger"></i></li>
     </ul>
   </div>
 
