--- a/HealthMed.Web/ClientApp/src/app/core/menu/menu.component.html
+++ b/HealthMed.Web/ClientApp/src/app/core/menu/menu.component.html
@@ -8,7 +8,7 @@
     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
       <ul class="navbar-nav flex-grow">
         <li class="nav-item">
-          <a class="nav-link text-dark card-user">{{getUserName()}}</a>
+          <a class="nav-link text-dark card-user">Olá, {{getUserName()}}</a>
         </li>
         <li class="nav-item logout">
           <a class="nav-link text-danger" (click)="logout()"><i class="fa fa-sign-out text-danger logout"
