--- a/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
+++ b/HealthMed.Web/ClientApp/src/app/home/medico/medico.component.html
@@ -8,7 +8,7 @@
   <div class="row align-items-center py-3">
 
     <div class="col-md-3">
-      <label for="data" class="label">Data</label>
+      <label for="data" class="label">Selecione uma Data</label>
       <input placeholder="dd/mm/aaaa" id="data" class="form-control" formControlName="data" bsDatepicker
         #dp="bsDatepicker" autocomplete="off" ondrop="return false;" required>
     </div>
@@ -22,7 +22,7 @@
 
     <div class="col pt-4">
       <button class="btn btn-warning me-2"><i class="fa fa-sign-in" (click)="limpar()"></i> Limpar</button>
-      <button [disabled]="agendaForm.invalid" class="btn btn-success" (click)="onSubmit()"><i class="fa fa-sign-in"></i>Salvar</button>
+      <button [disabled]="agendaForm.invalid" class="btn btn-success" (click)="onSubmit()"><i class="fa fa-sign-in"></i> Salvar</button>
     </div>
   </div>
 </form>
@@ -37,15 +37,19 @@
   <div class="col-2 card-data align-content-center">
     <ul class="list-group list-group-horizontal position-relative">
       <li class="list-group-item">{{item.data}}</li>
-      <li class="list-group-item btn-remove" (click)="modalExcluir(item.data)"><i class="col fa fa-close text-danger"></i></li>
+      <li class="list-group-item btn-remove" (click)="modalExcluir(item.data)" data-toggle="tooltip" title="Remover todos os horários">
+        <i class="col fa fa-close text-danger"></i>
+      </li>
     </ul>
   </div>
 
   <div class="col">
     <ul class="list-group list-group-horizontal position-relative overflow-auto w-75">
-      <li *ngFor="let hora of item.horarios" class="btn list-group-item" 
+      <li type="button" *ngFor="let hora of item.horarios" class="btn btn-light list-group-item" 
       (click)="modalExcluirHorario(hora.idAgenda)"
-      [ngClass]="hora.agendado? 'horario-agendado':''">{{hora.horario}}</li>
+      [ngClass]="hora.agendado? 'horario-agendado':''" data-toggle="tooltip" title="Remover Horário">{{hora.horario}}
+    </li>
     </ul>
   </div>
 </div>
+
